minor bug fix for swagger docs
